2013-09-04  Laird Nelson  <ljnelson@gmail.com>

 * src/main/java/com/edugility/objexj/engine/InstanceOfMVELFilter.java: Fixed issue #5 (https://github.com/ljnelson/objexj/issues/5).
