@@ -1,4 +1,8 @@
 2013-09-04  Laird Nelson  <ljnelson@gmail.com>
 
- * src/main/java/com/edugility/objexj/engine/InstanceOfMVELFilter.java: Fixed issue #5 (https://github.com/ljnelson/objexj/issues/5).
+	* src/main/java/com/edugility/objexj/engine/Program.java: Added toString(int) method to allow instruction highlighting for debugging purposes.
+
+	* src/main/java/com/edugility/objexj/engine/ProgramCounter.java: Formatted toString() a little more nicely.
+
+	* src/main/java/com/edugility/objexj/engine/InstanceOfMVELFilter.java: Fixed issue #5 (https://github.com/ljnelson/objexj/issues/5).
 
